[gd_scene load_steps=7 format=3 uid="uid://dy0a0dny1ynjl"]

[ext_resource type="Script" uid="uid://cliu6rx0puh31" path="res://game/scenes/play_menu.gd" id="1_s25ik"]
[ext_resource type="Texture2D" uid="uid://dlcvw5a4xsjnf" path="res://assets/images/aa title highlight frame.png" id="2_2b28y"]
[ext_resource type="Texture2D" uid="uid://b6f6wh8geahv5" path="res://assets/images/aa title no highlight.png" id="3_i36gd"]
[ext_resource type="PackedScene" uid="uid://5uj1m7aqitvq" path="res://game/ui/game_menu/play_button.tscn" id="4_i454b"]
[ext_resource type="Texture2D" uid="uid://dqyb6hc63repu" path="res://assets/images/play button highlighted.png" id="5_56igy"]
[ext_resource type="AudioStream" uid="uid://codv2q68kk7d2" path="res://assets/sfx/towny.ogg" id="6_2b28y"]

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s25ik")

[node name="BackgroundPoint" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 960.0
texture = ExtResource("2_2b28y")

[node name="BackgroundDefault" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1440.0
offset_bottom = 960.0
texture = ExtResource("3_i36gd")

[node name="PlayButton" parent="." instance=ExtResource("4_i454b")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 602.0
offset_top = 654.0
offset_right = 853.0
offset_bottom = 850.0
texture_pressed = ExtResource("5_56igy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2b28y")
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1078.0
offset_top = 750.0
offset_right = 1400.0
offset_bottom = 903.0
theme_override_constants/line_spacing = -15
theme_override_font_sizes/font_size = 54
text = "a game by
soap, kyo,
sock & aris"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 942.0
offset_top = 900.0
offset_right = 1393.0
offset_bottom = 1035.0
theme_override_constants/line_spacing = -15
theme_override_font_sizes/font_size = 24
text = "made with <3 and godot"
horizontal_alignment = 2

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
